feat: create a route to search tunes by title